lf2_erase_if: assigned a P number

--- a/algorithms/lf2_erase_if/D0646R0.tex
+++ b/algorithms/lf2_erase_if/D0646R0.tex
@@ -30,7 +30,8 @@
 
 \begin{flushright}
   \begin{tabular}{ll}
-  Document \#:&D0xxxR0\\
+% Document \#:&P0646R0\\
+  Document \#:&D0646R0\\
   Date:       &\date{2017-05-19}\\
   Project:    &Programming Language C++\\
               &Library Evolution Working Group\\
