lf2_erase_if: add acknowledgements and rename to P for publishing

--- a/algorithms/lf2_erase_if/P0646R0.tex
+++ b/algorithms/lf2_erase_if/P0646R0.tex
@@ -251,6 +251,14 @@ of the two is better. In Table~\ref{tab:asm}, this is called
 We think it is safe to say that the introduction of the return type
 does not pessimise callers that don't need it.
 
+\section{Acknowledgements}
+
+We thank the reviewers of draft versions of this proposal and the
+participants of the associated discussion on
+\url{std-proposals@isocpp.org} for their input: Sean Parent, Arthur
+O'Dwyer, Nicol Bolas, Ville Voutilainen, Casey Carter, Milian Wolff,
+Andr\'e Somers. All remaining errors are ours.
+
 \section{References}
 \renewcommand{\section}[2]{}%
 \begin{thebibliography}{9}
