lf2_erase_if: fix missing P in document number

--- a/algorithms/lf2_erase_if/P0646R0.tex
+++ b/algorithms/lf2_erase_if/P0646R0.tex
@@ -31,7 +31,7 @@
 \begin{flushright}
   \begin{tabular}{ll}
 % Document \#:&P0646R0\\
-  Document \#:&D0646R0\\
+  Document \#:&P0646R0\\
   Date:       &\date{2017-05-19}\\
   Project:    &Programming Language C++\\
               &Library Evolution Working Group\\
