--- a/utility/packaged_task/deduction_guides/D0000.tex
+++ b/utility/packaged_task/deduction_guides/D0000.tex
@@ -56,7 +56,7 @@ not previously compile, but does not change the meaning of existing code.
 
 \section{Proposed Wording}
 
-In \texttt{[futures.task.members]}, before the non-member
+In \texttt{[futures.task]}, before the non-member
 \texttt{swap} function declaration, add:
 
 \begin{quote}
@@ -82,9 +82,10 @@ as an unevaluated operand.  In that case, if
 \texttt{G}, then the deduced type is \texttt{packaged\_task<R(A...)>}.
 \end{quote}
 
-%\section{Acknowledgements}
+\section{Acknowledgements}
 
-
+Barry Revzin found a bug in a draft version of this paper. All other
+errors are mine.
 
 %\section{References}
 %\renewcommand{\section}[2]{}%
