packaged_task: note that we propose whatever deduction guides std::function has for packaged_task, too

--- a/utility/packaged_task/deduction_guides/D0000.tex
+++ b/utility/packaged_task/deduction_guides/D0000.tex
@@ -56,6 +56,9 @@ not previously compile, but does not change the meaning of existing code.
 
 \section{Proposed Wording}
 
+NB: The intent is to re-use the wording that \texttt{std::function} has in
+the draft at the time of acceptance.
+
 In \texttt{[futures.task]}, before the non-member
 \texttt{swap} function declaration, add:
 
