packaged_task: got number assigned

--- a/utility/packaged_task/deduction_guides/P1038R0.tex
+++ b/utility/packaged_task/deduction_guides/P1038R0.tex
@@ -30,7 +30,7 @@
 
 \begin{flushright}
   \begin{tabular}{ll}
-  Document \#:&PxxxxR0\\
+  Document \#:&P1038R0\\
   Date:       &\date{2018-04-19}\\
   Project:    &Programming Language C++\\
               &Library Evolution Group\\
