--- a/algorithms/lf2_erase_if/D1115R0.tex
+++ b/algorithms/lf2_erase_if/D1115R0.tex
@@ -23,26 +23,38 @@
 \newcommand{\emailaddress}{marc.mutz@kdab.com}
 \newcommand{\email}{\href{mailto:\emailaddress}{\emailaddress}}
 \newcommand{\wgpaper}[1]{\href{https://wg21.link/#1}{#1}}
+\newcommand{\isref}[1]{\textbf{[\wgpaper{#1}]}}
+\newcommand{\cst}{\texttt{\textit{<container>}::size\_type}}
 
 \date{}
-\title{Improving the Return Value of Erase-Like Algorithms II:\\ Library
-  Fundamentals V3 \texttt{erase}/\texttt{erase\_if}}
+\title{Improving the Return Value of Erase-Like Algorithms II:\\ Free
+  \texttt{erase}/\texttt{erase\_if}}
 
 \begin{document}
 
 \maketitle\vspace{-2cm}
 
-\begin{flushright}
-  \begin{tabular}{ll}
+\begin{tabular}{ll}
 % Document \#:&P0646R0\\
   Document \#:&D1115R0\\
-  Date:       &\date{2018-06-04}\\
+  Date:       &\today\\
   Project:    &Programming Language C++\\
               &Library Working Group\\
 %              &Library Group\\
   Reply-to:   &\author{Marc Mutz} \textless\email\textgreater
-  \end{tabular}
-\end{flushright}
+\end{tabular}
+\vspace{1cm}
+\begin{abstract}
+  We propose to change the return type of \texttt{erase()} and
+  \texttt{erase\_if()} free functions from \texttt{void} to \cst,
+  returning the number of elements removed. This restores consistency
+  with long-established API, such as
+  \texttt{map/set::erase(key\_type)}, as well as the recent changes to
+  \texttt{forward\_}/\texttt{list::remove()}.
+\end{abstract}
+
+
+\tableofcontents
 
 \section{Change History}
 
@@ -53,26 +65,19 @@ shop in Rapperswil, yet.
 \subsection{Changes from P0646R0}
 
 \begin{enumerate}
-\item Removed changes to the IS draft, as these continue as
-  \wgpaper{P0646R1}.
+\item Removed changes to the IS draft, as these continued as
+  \wgpaper{P0646R1} (which has since been adopted in Rapperswil).
 \item Changed the return type from \texttt{size\_t} to
-  \texttt{container::size\_type}.
-\item Rebased on LFv3 draft \cite{LFv3}.
+  \cst, as requestd by LEWG in Toronto.
+\item Rebased on IS draft, as the target of this proposal has since
+  been merged into it from the LFv2 TS.
+\item Added feature test macro.
 \end{enumerate}
 
-\section{Introduction}
-
-We propose to change the return type of \cite{LFv3} \texttt{erase()}
-and \texttt{erase\_if()} algorithms from \texttt{void} to
-\texttt{container::size\_type}, returning the number of elements removed.
-
-This restores consistency with long-established API, such as
-\texttt{map/set::erase(key\_type)}.
-
-We show that C++17 compilers do not pessimise existing users that
-ignore the return value.
-
 \section{Motivation and Scope}
+
+This section is copied from \wgpaper{P0646R1}, so readers familiar
+with that paper can skip these paragraphs.
 
 \subsection{[[nodiscard]] Useful Information}
 
@@ -108,6 +113,12 @@ if (erase(fl, nullptr)) {
 
 \subsection{Consistency}
 
+In Rapperswil, the committee accepted \wgpaper{P0646R1}, which changed
+the \texttt{list} and \texttt{forward\_list} member algorithms
+\texttt{remove}/\texttt{\_if} and \texttt{unique} to return the number
+of elements erased. This paper applies the same logic to the
+non-member versions of these algorithms.
+
 We note that the associative containers have returned the number of
 erased elements from their \texttt{erase(key\_type)} member functions
 since at least \cite{STL}. This proposal therefore also restores
@@ -116,49 +127,84 @@ lost consistency with existing practice.
 \section{Impact on the Standard}
 
 Minimal. We propose to change the return value of library functions
-from \texttt{void} to \texttt{size\_type}. Existing users expecting no
-return value can continue to ignore it. There is no
-binary-compatibility issue here, since the algorithms in LFv2 are
-specified in inline namespace \texttt{fundamentals\_v2}, while the
-changed algorithms will be in \texttt{fundamentals\_v3}.
+from \texttt{void} to \texttt{size\_type}. Existing users of the LFv2
+versions expecting no return value can continue to ignore it. In
+particular, this is one of the changes explicitly mentioned in
+\cite{P0921R2}.
+
+Strictly speaking, the change is source-incompatible: Existing code
+which assumes that the algorithms return \texttt{void} might fail to
+compile. This can e.g.\ come up in situations where the C++ user
+explicitly specialized these algorithms. However, all such code will
+so far have used the LFv2 versions of these algorithms, which are in a
+different namespace.
+
+For the same reason, there is no binary-compatibility issue here: the
+algorithms in LFv2 were specified in namespace
+\texttt{std::experimental}, while the changed algorithms will be in
+\texttt{std} directly.
 
 \section{Proposed Wording}
 
-\subsection{Changes to \cite{LFv3}}
-
-In section \textbf{[container.erasure.syn]}:
+The following changes are relative to \cite{N4810}:
 
 \begin{itemize}
-\item For each \texttt{erase(\textit{container}\& c, \ldots)} and
-  \texttt{erase\_if(\textit{container}\& c, \ldots)}, change the return
-  type from \texttt{void} to \texttt{typename \textit{container}::size\_type}
-\end{itemize}
+\item In \isref{support.limits.general}, Table~36, adjust the listed
+  \textbf{Value} of "\texttt{\_\_cpp\_lib\_erase\_if}" to match the
+  date of application of this paper to the IS draft.
 
-In section \textbf{[container.erasure.erase\_if]}:
+\item In each of \isref{string.syn},
+  \isref{string.erasure},\\ \isref{deque.syn},
+  \isref{forward.list.syn}, \isref{list.syn}, \isref{vector.syn},
+  \\\isref{deque.erasure}, \isref{forward.list.erasure},
+  \isref{list.erasure}, \isref{vector.erasure},\\
+  \isref{associative.map.syn}, \isref{associative.set.syn},
+  \isref{unord.map.syn}, \isref{unord.set.syn},\\\isref{map.erasure},
+  \isref{multimap.erasure}, \isref{set.erasure},
+  \isref{multiset.erasure},\\ \isref{unord.map.erasure},
+  \isref{unord.multimap.erasure},\\ \isref{unord.map.erasure},
+  \isref{unord.multiset.erasure}:
+  
+For each \texttt{erase(\textit{<container>}\& c, \ldots)} and
+\texttt{erase\_if(\textit{<container>}\& c, \ldots)} function, change
+the return type from \texttt{void} to \texttt{typename \cst}.
 
-\begin{itemize}
-\item replace all \texttt{void} return types with \texttt{size\_type}
-\item change paragraph 2 to
-  \begin{quotation}
-    \textit{Effects:} Equivalent to:
-    \begin{lstlisting}[language=C++]
-      auto it = remove(c.begin(), c.end(), value);
-      auto res = size_t(distance(it, c.end()));
-      c.erase(it, c.end());
-      return res;
-    \end{lstlisting}
-  \end{quotation}
-\item add new paragraph after each of paragraphs 2, 4, and 6:
-  \begin{quotation}
-    \textit{Returns:} The number of elements erased.
-  \end{quotation}
-\item in paragraph 4, insert \texttt{return} between ``Equivalent
-  to:'' and ``\texttt{c.remove\_if(}\ldots''.
-\item change paragraph 4 to
-  \begin{quotation}
-    \textit{Effects:} Equivalent to:
-    \begin{lstlisting}[language=diff]
-+ size_t res = 0;
+\item In each of \isref{string.erasure}, \isref{deque.erasure},
+  \isref{vector.erasure}, change paragraphs 1 as follows:
+\begin{lstlisting}[language=diff]
+- Effects: Equivalent to: c.erase(remove(c.begin(), c.end(), pred), c.end());
++ Effects: Equivalent to:
++    auto it = remove(c.begin(), c.end(), pred);
++    auto r = distance(it, c.end());
++    c.erase(it, c.end());
++    return r;
+\end{lstlisting}
+
+\item In each of \isref{string.erasure}, \isref{deque.erasure},
+  \isref{vector.erasure}, change paragraphs 2 as follows:
+\begin{lstlisting}[language=diff]
+- Effects: Equivalent to: c.erase(remove_if(c.begin(), c.end(), pred), c.end());
++ Effects: Equivalent to:
++    auto it = remove_if(c.begin(), c.end(), pred);
++    auto r = distance(it, c.end());
++    c.erase(it, c.end());
++    return r;
+\end{lstlisting}
+
+\item In each of \isref{forward.list.erasure}, \isref{list.erasure},
+  in paragraphs 1 and 2, add ``\texttt{return} '' between ``Equivalent
+  to:'' and the start of the code.
+
+\item In each of  \isref{map.erasure},
+  \isref{multimap.erasure}, \isref{set.erasure},
+  \isref{multiset.erasure},\\ \isref{unord.map.erasure},
+  \isref{unord.multi\-map.erasure}, \isref{unord.map.erasure},\\
+  \isref{unord.multiset.erasure}:
+  
+  Change paragraphs 1 as indicated:
+
+\begin{lstlisting}[language=diff]
++ typename <container>::size_type res = 0;
   for (auto i = c.begin(), last = c.end(); i != last; ) {
     if (pred(*i)) {
       i = c.erase(i);
@@ -168,86 +214,49 @@ In section \textbf{[container.erasure.erase\_if]}:
     }
   }
 + return res;
-    \end{lstlisting}
-  \end{quotation}
-\end{itemize}
+\end{lstlisting}
 
-In section \textbf{[container.erasure.erase]}:
-
+where \texttt{\textit{<container>}} is as follows:
 \begin{itemize}
-\item replace all \texttt{void} return types with \texttt{size\_t}
-\item change paragraph 2 to
-  \begin{quotation}
-    \textit{Effects:} Equivalent to:
-    \begin{lstlisting}[language=C++]
-      auto it = remove(c.begin(), c.end(), value);
-      auto res = size_t(distance(it, c.end()));
-      c.erase(it, c.end());
-      return res;
-    \end{lstlisting}
-  \end{quotation}
-\item add new paragraph after each of paragraphs 2 and 4:
-  \begin{quotation}
-    \textit{Returns:} The number of elements erased.
-  \end{quotation}
-\item in paragraph 4, insert \texttt{return} between ``Equivalent to:'' and ``\texttt{erase\_if(}\ldots''.
+\item in \isref{map.erasure}: \texttt{map<Key, T, Compare, Allocator>}
+\item in \isref{multimap.erasure}: \texttt{multimap<Key, T, Compare, Allocator>}
+\item in \isref{set.erasure}: \texttt{set<Key, Compare, Allocator>}
+\item in \isref{multiset.erasure}: \texttt{multiset<Key, Compare, Allocator>}
+\item in \isref{unord.map.erasure}: \texttt{unordered\_map<K, T, H, P, A>}
+\item in \isref{unord.multimap.erasure}: \texttt{unordered\_multimap<K, T, H, P, A>}
+\item in \isref{unord.set.erasure}: \texttt{unordered\_set<K, T, H, P, A>}
+\item in \isref{unord.multiset.erasure}: \texttt{unordered\_multiset<K, T, H, P, A>}
 \end{itemize}
+\end{itemize}
+
+\subsection{Feature Test Macro}
+
+No new macro is necessary.
 
 \section{Design Decisions}
 
-\subsection{Open Questions}
+\subsection{\texttt{size\_t} vs.\ \texttt{size\_type}}
 
-Should we return \texttt{Container::size\_type} or
-\texttt{std::size\_t} from these functions? We have chosen
-\texttt{size\_t} for now, because of brevity, but are fine with
-\texttt{size\_type}, too, should the committee favour that.
+Should we return \cst{} or \texttt{std::size\_t} from these functions?
+\wgpaper{P0646R0} chose \texttt{size\_t}, for brevity, but LEWG in
+Toronto favoured \texttt{size\_type}, so this is what's proposed now.
 
 \subsection{Performance Considerations}
 
-Early reviewers of this proposal expressed concerns that the
-calculation of the return value might pessimise the algorithm over the
-version that returns \texttt{void}. Tests run on \url{godbolt.org}
-show, however, that the assembler instructions generated for the
-functions \texttt{counting()} and \texttt{noncounting()} in the
-following test were identical for GCC:
-
-\lstinputlisting[language=C++]{code/comparison.cpp}
-
-Clang sometimes formats the code a little differently (same
-instructions, grouped differently), without a clear indication which
-of the two is better. In Table~\ref{tab:asm}, this is called
-\emph{equivalent}.
-
-\begin{table}
-  \centering
-  \begin{tabular}[t]{|l||c|c|c|}
-    \hline
-    Container      & GCC 7.1   & Clang 4.0  & MSVC 2017 \\ \hline\hline
-    vector         & identical & identical  & --- \\
-    deque          & identical & identical  & --- \\
-    list           & identical & equivalent & --- \\
-    set            & identical & equivalent & --- \\
-    unordered\_set & identical & identical  & --- \\
-    map            & identical & equivalent & --- \\
-    unordered\_map & identical & identical  & --- \\ \hline
-  \end{tabular}
-  \caption{Assembler Comparison @ \texttt{-O2} (MSVC does not support constexpr-if)}
-  \label{tab:asm}
-\end{table}
-
-We think it is safe to say that the introduction of the return type
-does not pessimise callers that don't need it.
+Please refer to \wgpaper{P0646R0} for a detailed analysis. TL;DR: We
+believe that returning the number of elements removed pessimises
+callers that don't need it.
 
 \section{Acknowledgements}
 
-We thank the reviewers of draft versions of this proposal and the
-participants of the associated discussion on
-\url{std-proposals@isocpp.org} for their input: Sean Parent, Arthur
-O'Dwyer, Nicol Bolas, Ville Voutilainen, Casey Carter, Milian Wolff,
-Andr\'e Somers. All remaining errors are ours.
+We thank the reviewers of draft versions of the original proposal and
+the participants of the associated discussion on
+\url{std-proposals@isocpp.org} and LWG in Rapperswil for their input:
+Sean Parent, Arthur O'Dwyer, Nicol Bolas, Ville Voutilainen, Casey
+Carter, Milian Wolff, Andr\'e Somers. All remaining errors are ours.
 
-\section{References}
-\renewcommand{\section}[2]{}%
+%\section{References}
+%\renewcommand{\section}[2]{}%
 \begin{thebibliography}{9}
 \bibitem[A9]{A9}
   Alexander Stepanov \emph{et al.}\newline
@@ -259,17 +268,16 @@ Andr\'e Somers. All remaining errors are ours.
   Alexander Stepanov \emph{et al.}\newline
   \emph{Associative Container}\newline
   in: \emph{Standard Template Library Programmer's Guide}\newline
-  \url{https://www.sgi.com/tech/stl/AssociativeContainer.html}
+  \url{https://www.sgi.com/tech/stl/AssociativeContainer.html} (accessed 2017-06-01)
 
-\bibitem[N4600]{LFv2TS}
-  Geoffrey Romer (editor)\newline
-  \emph{Working Draft, C++ Extensions for Library Fundamentals, Version 2}\newline
-  \url{http://open-std.org/JTC1/SC22/WG21/docs/papers/2016/n4600.html}
-
-\bibitem[N4659]{cpp17}
+\bibitem[N4810]{N4810}
   Richard Smith (editor)\newline
-  \emph{Working Draft, Standard for Programming Language C++}\newline
-  \url{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2017/n4659.pdf}
+  \emph{Working Draft: Standard for Programming Language C++}\newline
+  \url{http://wg21.link/N4810}
+
+\bibitem[P0921R2]{P0921R2} Titus Winters\newline
+  \emph{Standard Library Compatibility}\newline
+  \url{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0921r2.pdf}
 \end{thebibliography}
 
 \end{document}
