--- a/algorithms/lf2_erase_if/P1115R0.tex
+++ b/algorithms/lf2_erase_if/P1115R0.tex
@@ -36,7 +36,7 @@
 
 \begin{tabular}{ll}
 % Document \#:&P0646R0\\
-  Document \#:&D1115R0\\
+  Document \#:&P1115R0\\
   Date:       &\today\\
   Project:    &Programming Language C++\\
               &Library Working Group\\
