--- a/algorithms/lf2_erase_if/P1115R3.tex
+++ b/algorithms/lf2_erase_if/P1115R3.tex
@@ -36,7 +36,7 @@
 
 \begin{tabular}{ll}
 % Document \#:&P0646R0\\
-  Document \#:&D1115R3\\
+  Document \#:&R1115R3\\
   Date:       &\today\\
   Project:    &Programming Language C++\\
               &Library Working Group\\
