--- a/utility/optional/value_or/D2218R0.tex
+++ b/utility/optional/value_or/D2218R0.tex
@@ -35,10 +35,10 @@
 \maketitle%\vspace{-2cm}
 
 \begin{tabular}{ll}
-  Document \#:&N3887\\
+  Document \#:&D2218R0\\
   Date:       &\today\\
   Project:    &Programming Language C++\\
-              &Library Evolution Group Incubator\\
+              &LEWGI\\
 %              &Library Group\\
   Reply-to:   &\author{Marc Mutz} \textless\email\textgreater
 \end{tabular}
