Update template with new email

--- a/templates/D0000.tex
+++ b/templates/D0000.tex
@@ -18,7 +18,7 @@
   basicstyle=\footnotesize\ttfamily,
 }
 
-\newcommand{\emailaddress}{marc.mutz@kdab.com}
+\newcommand{\emailaddress}{marc.mutz@hotmail.com}
 \newcommand{\email}{\href{mailto:\emailaddress}{\emailaddress}}
 
 \date{}
